fix mobile doctor slider arrows styles because fill option bugged the visibility of arrows on mobile

--- a/styles/blocks/_team.scss
+++ b/styles/blocks/_team.scss
@@ -383,6 +383,7 @@
   @include mobile {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 24px;
     margin-top: 20px;
   }
@@ -402,7 +403,7 @@
   background: transparent;
 
   color: var(--color-gold);
-  fill: currentColor;
+  // fill: currentColor;
 
   font-size: 22px;
   cursor: pointer;
